fixed bullet for swiper in project details on mobile

--- a/scss/modules/_project-details.scss
+++ b/scss/modules/_project-details.scss
@@ -304,6 +304,9 @@
                        height: 9px; 
                        margin: 15px;
                        transition: margin 0.3s ease;
+                       @include biggerPhone{
+                        margin: 6px;
+                       }
                        
                    }
                    .scrollArrowRight{ 
